tests/behavioral/snapshots/behavioral__single_page_creates_md_file.snap
---
source: crates/webfang_core/../../tests/behavioral/main.rs
expression: redacted
---
---
title: Single Page Test
url: http://127.0.0.1:<PORT>/
date: 2026-07-15
excerpt: This is meaningful content for the extractor to process.
---

## Hello World

This is meaningful content for the extractor to process.

More paragraphs ensure readability can extract a proper document.
