tests/behavioral/snapshots/behavioral__unreachable_host_stderr.snap
---
source: crates/webfang_core/../../tests/behavioral/main.rs
assertion_line: 43
expression: redacted
---
  <TIMESTAMP>  WARN webfang_core::infrastructure::crawler::robots_utils: Failed to fetch robots.txt for 127.0.0.1: error sending request for uri (https://127.0.0.1/robots.txt): client error (Connect)
    at crates/webfang_core/src/infrastructure/crawler/robots_utils.rs:125

  <TIMESTAMP>  WARN webfang_core::cli::scrape_flow: Failed to scrape http://127.0.0.1:<PORT>/: error de red: error sending request for uri (http://127.0.0.1:<PORT>/): client error (Connect)
    at crates/webfang_core/src/cli/scrape_flow.rs:194

Failed to scrape http://127.0.0.1:<PORT>/: error de red: error sending request for uri (http://127.0.0.1:<PORT>/): client error (Connect)  ← error sending request for uri (http://127.0.0.1:<PORT>/): client error (Connect)  ← client error (Connect)  ← tcp connect error  ← Connection refused (os error 111)
No pages were successfully scraped
Error: No pages were successfully scraped
